--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="bg-gamer overflow-hidden p-5 p-md-5 my-3 text-center">
             <div class=" col-md-5 p-lg-6 mx-auto my-5 text-white pt-5">
               <h1 class="display-4 fw-normal rbno">Mira nuestros productos</h1>
-              <p class="lead fw-normal nova">Sumérgete en las partidsa competitivas con los mejores perifericos del Mercado</p>
+              <p class="lead fw-normal nova">Sumérgete en las partidas competitivas con los mejores perifericos del Mercado</p>
               <a class="btn bg-btn nova" href="./productos.html">Ver Productos</a>
             </div>
           </div>
